<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/female">


    <TextView
        android:id="@+id/text_1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_rellenar"
        android:textColor="@android:color/holo_orange_light" />

    <EditText
        android:id="@+id/edit_1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editText_peso"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/edit_2.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editText_altura"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:layout_gravity="center"
        android:id="@+id/bottom2.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calcular" />

    <TextView
        android:id="@+id/text_2.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/textview_imc"
        android:textColor="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/text_3.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_result"
        android:textColor="@android:color/holo_blue_bright" />

</LinearLayout>