<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/male"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_rellenar"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editText_peso"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editText_altura"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_calcular"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/tvImc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_imc"

        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_result"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


</LinearLayout>