<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/female">


    <TextView
        android:id="@+id/tvFill.1"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_rellenar"
        android:textColor="@android:color/holo_orange_light" />

    <EditText
        android:id="@+id/etWeight.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editText_peso"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <EditText
        android:id="@+id/etHeight.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/editText_altura"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light" />

    <Button
        android:id="@+id/btCalculate.1"
        android:layout_gravity="center"
        android:textSize="22dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_calcular" />

    <TextView
        android:id="@+id/tvImc.1"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:text="@string/textview_imc"
        android:textColor="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/tvResult.1"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/textview_result"
        android:textColor="@android:color/holo_blue_bright" />

    <ImageView
        android:id="@+id/ivImage.1"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>